--- a/01_GuidedStepSupportFragment/app/build.gradle
+++ b/01_GuidedStepSupportFragment/app/build.gradle
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.9.0'
