--- a/01_GuidedStepSupportFragment/app/src/main/AndroidManifest.xml
+++ b/01_GuidedStepSupportFragment/app/src/main/AndroidManifest.xml
@@ -2,8 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- *** AndroidTV用設定 *** -->
+    <!-- タッチスクリーン不要 -->
+    <!-- <uses-feature android:name="android.hardware.touchscreen" android:required="false" /> -->
+    <!-- AndroidTV以外も許可(AndroidOS搭載のスマホ) -->
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
+        android:banner="@drawable/ic_banner"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -17,8 +26,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
 
             <meta-data
